fix navbar displaying over scrollbar

--- a/src/components/appbar/styles/style.scss
+++ b/src/components/appbar/styles/style.scss
@@ -7,16 +7,14 @@
   display: flex;
   flex-direction: row;
   padding: 1rem 2rem;
-
   align-items: center;
-  // justify-content: space-between;
-  position: fixed;
-  width: inherit;
+  position: sticky;
   transition: all 0.2s;
   z-index: 80;
   top: 0;
   left: 0;
   right: 0;
+  background-color: $light_gray1;
 
   box-shadow: 0px 1px rgb(0 0 0 / 10%);
 
